@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
 
-AM_INIT_AUTOMAKE(synaptic, 0.63.1)
+AM_INIT_AUTOMAKE(synaptic, 0.70~pre1)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
