@@ -12,6 +12,8 @@ synaptic (0.70~pre1) UNRELEASED; urgency=low
   * po/th.po:
     - updated, thanks to Theppitak Karoonboonyanan
       (closes: #592696)
+  * pre-build.sh:
+    - ensure version number gets updated on build
 
  -- Michael Vogt <mvo@debian.org>  Thu, 29 Jul 2010 12:13:18 +0200
 
